--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
 	<!-- Page Title -->
-	<title>Physiocare - Physiotherapy HTML Template</title>
+	<title>B3Viral</title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 	<!-- Google Fonts Css-->
@@ -92,18 +92,43 @@
 	<!-- Page Header End -->
 
     <!-- Page Team Start -->
-    <div class="page-team">
-        <div class="container">
-            <div class="row shop-data">
-                <!-- js -->
-
-           
-
-            
-
+<div class="page-team">
+  <div class="container">
+    <h3 class="my-4">Shoes</h3>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="testimonial-slider">
+          <div class="swiper">
+            <div class="swiper-wrapper shop-data" data-cursor-text="Drag">
+              <!-- JS -->
             </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
+</div>
+
+
+<!--  -->
+
+<div class="page-team">
+  <div class="container">
+    <h3 class="my-4">watch</h3>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="testimonial-slider ">
+          <div class="swiper">
+            <div class="swiper-wrapper shop-data-1" data-cursor-text="Drag">
+              <!-- JS -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
     <!-- Page Team End -->
 
 
