--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
 	<link rel="stylesheet" href="assets/css/mousecursor.css">
 	<!-- Main Custom Css -->
 	<link href="assets/css/custom.css" rel="stylesheet" media="screen">
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-144C6BY6ED"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-144C6BY6ED');
+</script>
 </head>
 <body>
 
